#bugfix-collapse组件

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -67,10 +67,6 @@
     width: 100%;
     flex: 1;
     overflow: auto;
-    transition: height var(#{$prefix}-animate-time) ease-in-out,
-    padding-top var(#{$prefix}-animate-time) ease-in-out,
-    padding-bottom var(#{$prefix}-animate-time) ease-in-out,
-    max-height var(#{$prefix}-animate-time) ease-in-out;
 
     // 菜单项样式
     & .#{$preName}-menu-item {
@@ -191,6 +187,13 @@
       min-height: 40px;
     }
   }
+}
+
+.collapse-transition {
+  transition: height var(#{$prefix}-animate-time, .3s) ease-in-out,
+  padding-top var(#{$prefix}-animate-time, .3s) ease-in-out,
+  padding-bottom var(#{$prefix}-animate-time, .3s) ease-in-out,
+  max-height var(#{$prefix}-animate-time, .3s) ease-in-out;
 }
 
 .popover-enter-active,
